--- a/Aula 04 - Criando nossa própria API com Spring/linguagens-api/src/main/resources/application.properties
+++ b/Aula 04 - Criando nossa própria API com Spring/linguagens-api/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri = mongodb+srv://aluraDb:aluraDb@cluster0.j9bedfc.mongodb.net/aluraDb?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://<user>:<passowrd>@cluster0.j9bedfc.mongodb.net/<db>?retryWrites=true&w=majority
